@@ -1,5 +1,10 @@
 1.0.2-devel
 ======================
+ * Added portal_atct method to fix portal_type on CMF objects that have empty
+   portal_type because they were incorrectly instantiated.  Such situations
+   caused migration to fail. This method is available in the type migration
+   form, and also runs automatically on install.
+   [alecm]
 
  * Fixed #4937: Removed list criteria from text indices, because it makes no
    sense, AND and OR must be used explicitly.
